--- a/css/responsive-design.css
+++ b/css/responsive-design.css
@@ -1,4 +1,16 @@
 @media screen and (width<800px) {
+    :root{
+        font-size: 8px;
+        --size-xs: 0.625;
+        --size-sm: 0.75rem;
+        --size-base:1rem;
+        --size-lg: 1.125rem;
+        --size-xl: 1.375rem;
+        --size-2xl: 1.625;
+        --size-3xl: 1.875rem;
+    }
+
+
     .header-container{
         display: block !important;
     }
@@ -20,6 +32,8 @@
         .header-list-text{
             margin:auto;
             width:fit-content;
+            font-size: var(--size-3xl) !important;
+
         }
         .header-dropdown{
             position:relative !important;
@@ -50,5 +64,11 @@
     .header-rightside,.header-middleside{
         opacity: 0;
         height: 0;
+    }
+    /* Modal container */
+    .modal-outside-container{
+        overflow: hidden;
+        background-color:red;
+
     }
 }
